<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.setSityActivity"
    android:background="@color/blue_gray">

    <TextView
        android:id="@+id/set_sity_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_sity_heading"
        android:textColor="@color/ivory"
        android:textSize="30sp"
        android:layout_marginTop="90dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/set_sity_text"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set_sity_heading"
        android:layout_marginTop="120dp"
        android:text=""
        android:hint="@string/set_sity_hint"
        android:background="@drawable/background_edit"
        android:padding="5dp"
        />

    <TextView
        android:id="@+id/button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/set_sity_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/background_atribute"
        android:textColor="@color/white"
        android:paddingVertical="15dp"
        android:paddingHorizontal="30dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>