<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutDayActivity"
    android:background="@color/blue_gray">

    <TextView
        android:id="@+id/sity_about_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nulls"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/ivory"
        />

    <ScrollView
        android:id="@+id/scroll_about_day"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sity_about_day"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="35dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <TextView
                    android:id="@+id/degress_about_day"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="29"
                    android:gravity="center"
                    android:textSize="114sp"
                    android:layout_marginTop="70dp"
                    android:textColor="@color/ivory"
                    android:layout_marginLeft="30dp"/>
                <TextView
                    android:id="@+id/degress_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/degress_icon_about_day"
                    android:gravity="center"
                    android:textSize="26sp"
                    android:textColor="@color/ivory" />
            </LinearLayout>

            <TextView
                android:id="@+id/precipitation_about_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nulls"
                android:gravity="center"
                android:textSize="36sp"
                android:textColor="@color/ivory" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="120dp"
            android:background="@drawable/background_atribute"
            >
            <com.example.carwash.CastomView.RoundSlider
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:paddingVertical="5dp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/weather_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="10dp"
                android:paddingVertical="15dp"
                app:layout_constraintTop_toTopOf="@+id/sity"
                app:layout_constraintLeft_toLeftOf="parent"
                android:background="@drawable/background_atribute"
                android:layout_marginBottom="40dp"
                />
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:paddingHorizontal="20dp"
                android:layout_marginHorizontal="10dp"
                android:paddingVertical="15dp"
                android:background="@drawable/background_atribute"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"

                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/feels_about_day"
                            android:layout_weight="1"
                            android:textColor="@color/barvinoc"
                            android:textSize="16sp"
                            android:gravity="center"
                            android:layout_marginBottom="10dp"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/nulls"
                            android:layout_weight="1"
                            android:textColor="@color/ivory"
                            android:textSize="20sp"
                            android:gravity="center"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/humidity_about_day"
                            android:layout_weight="1"
                            android:textColor="@color/barvinoc"
                            android:textSize="16sp"
                            android:gravity="center"
                            android:layout_marginBottom="10dp"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/nulls"
                            android:layout_weight="1"
                            android:textColor="@color/ivory"
                            android:textSize="20sp"
                            android:gravity="center"
                            />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/probability_about_day"
                            android:layout_weight="1"
                            android:textColor="@color/barvinoc"
                            android:textSize="16sp"
                            android:gravity="center"
                            android:layout_marginBottom="10dp"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/nulls"
                            android:layout_weight="1"
                            android:textColor="@color/ivory"
                            android:textSize="20sp"
                            android:gravity="center"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/pressure_about_day"
                            android:layout_weight="1"
                            android:textColor="@color/barvinoc"
                            android:textSize="16sp"
                            android:gravity="center"
                            android:layout_marginBottom="10dp"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/nulls"
                            android:layout_weight="1"
                            android:textColor="@color/ivory"
                            android:textSize="20sp"
                            android:gravity="center"

                            />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/ivory"
                android:text="@string/data_about_day"
                android:textSize="14sp"
                android:gravity="center"
                android:layout_marginTop="20dp"
                />
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>